--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-range": "^1.8.14",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
     "rlayers": "^1.4.3",
