--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "SpookySpots",
+  "name": "SpookySpots",
   "icons": [
     {
       "src": "favicon.ico",
@@ -8,14 +8,19 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "apple-touch-icon",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "180x180"
     },
     {
-      "src": "logo512.png",
+      "src": "android-chrome-512",
       "type": "image/png",
       "sizes": "512x512"
+    },
+    {
+      "src": "android-chrome-192",
+      "type": "image/png",
+      "sizes": "192x192"
     }
   ],
   "start_url": ".",
