update icon src

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,17 +8,17 @@
       "type": "image/x-icon"
     },
     {
-      "src": "apple-touch-icon",
+      "src": "apple-touch-icon.png",
       "type": "image/png",
       "sizes": "180x180"
     },
     {
-      "src": "android-chrome-512",
+      "src": "android-chrome-512x512.png",
       "type": "image/png",
       "sizes": "512x512"
     },
     {
-      "src": "android-chrome-192",
+      "src": "android-chrome-192x192.png",
       "type": "image/png",
       "sizes": "192x192"
     }
