--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
     "geolib": "^3.3.3",
+    "html-react-parser": "^3.0.4",
     "ol": "^7.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
